--- a/client/css/main.css
+++ b/client/css/main.css
@@ -13,31 +13,31 @@
   justify-content: flex-start;
 }
 
-@media screen and (max-width: 600px) {
-  .item-thumb {
-    background-color: #3299bb;
-    flex-basis: 400px;
-    flex-grow: 1;
-    flex-shrink: 1;
-    width: 100%;
-    height: 100%;
-    margin: 2px;
-    padding: 2px;
-    color: white;
-  }
-}
+/*@media screen and (max-width: 600px) {*/
+  /*.item-thumb {*/
+    /*background-color: #3299bb;*/
+    /*flex-basis: 400px;*/
+    /*flex-grow: 1;*/
+    /*flex-shrink: 1;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*margin: 2px;*/
+    /*padding: 2px;*/
+    /*color: white;*/
+  /*}*/
+/*}*/
 
 @media screen and (min-width: 601px) {
   .item-thumb {
-    background-color: #3299bb;
+    background-color: #000000;
     flex-basis: 200px;
-    flex-grow: 1;
+    flex-grow: 0;
     flex-shrink: 0;
+    width: 200px;
+    height: 200px;
     margin: 2px;
     padding: 2px;
     color: white;
-    height: 100%;
-    width: 100%;
   }
 }
 
