--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -13,28 +13,28 @@
   justify-content: flex-start;
 }
 
-/*@media screen and (max-width: 600px) {*/
-  /*.item-thumb {*/
-    /*background-color: #3299bb;*/
-    /*flex-basis: 400px;*/
-    /*flex-grow: 1;*/
-    /*flex-shrink: 1;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*margin: 2px;*/
-    /*padding: 2px;*/
-    /*color: white;*/
-  /*}*/
-/*}*/
+.header {
+  height: 200px;
+  background-color: #3299bb;
+}
+
+@media screen and (max-width: 600px) {
+  .item-thumb {
+    background-color: #3299bb;
+    width: 20px;
+    height: 20px;
+    margin: 2px;
+    padding: 2px;
+    color: white;
+  }
+}
 
 @media screen and (min-width: 601px) {
   .item-thumb {
+    border-radius: 2px;
     background-color: #000000;
-    flex-basis: 200px;
-    flex-grow: 0;
-    flex-shrink: 0;
-    width: 200px;
-    height: 200px;
+    width: 40px;
+    height: 40px;
     margin: 2px;
     padding: 2px;
     color: white;
