--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -1,3 +1,5 @@
+$non-photo-blue: #A4DDED;
+
 .container-wrap {
   width: 100%;
   height: 100%;
@@ -15,7 +17,7 @@
 
 .header {
   height: 200px;
-  background-color: #3299bb;
+  background-color: $non-photo-blue;
 }
 
 @media screen and (max-width: 600px) {
