--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -1,4 +1,6 @@
-$non-photo-blue: #A4DDED;
+@import 'constants';
+@import 'base';
+@import 'mixins';
 
 .container-wrap {
   width: 100%;
@@ -47,3 +49,5 @@ $non-photo-blue: #A4DDED;
   width: 100%;
   height: 100%;
 }
+
+@import '../js/components/component/component-style';
