Add Google Plus post

--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -42,3 +42,4 @@
 
 @import '../js/components/tweet/tweet-style';
 @import '../js/components/facebook-post/facebook-post-style';
+@import '../js/components/google-post/google-post-style';
