--- a/client/js/pages/page/page-template.jade
+++ b/client/js/pages/page/page-template.jade
@@ -2,4 +2,5 @@ div.page-header
 div.page-container
   tweet(ng-repeat='tweet in vm.tweets', data='tweet')
   facebook-post(ng-repeat='post in vm.facebookPosts', data='post')
+  google-post(ng-repeat='post in vm.googlePosts', data='post')
 div.page-footer
