--- a/client/css/_theme.scss
+++ b/client/css/_theme.scss
@@ -1,8 +1,10 @@
 // sizes
 $desktop-width: 768px;
+$fixed-post-width: 600px;
 
 // theme colors
 $non-photo-blue: #A4DDED;
+$instagram-background: #EDEEEF;
 
 $font-main: #000000;
 $font-secondary: #777777;
