--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -5,41 +5,14 @@
 
 .page-container {
   padding: 20px 0 40px 0;
-  background-color: $non-photo-blue;
+  background-color: $instagram-background;
 }
 
 .page-header {
-  background-color: $non-photo-blue;
-}
-
-@media screen and (max-width: 600px) {
-  .item-thumb {
-    background-color: #3299bb;
-    width: 20px;
-    height: 20px;
-    margin: 2px;
-    padding: 2px;
-    color: white;
-  }
-}
-
-@media screen and (min-width: 601px) {
-  .item-thumb {
-    border-radius: 2px;
-    background-color: #000000;
-    width: 40px;
-    height: 40px;
-    margin: 2px;
-    padding: 2px;
-    color: white;
-  }
-}
-
-.item-thumb img {
-  width: 100%;
-  height: 100%;
+  background-color: $instagram-background;
 }
 
 @import '../js/components/tweet/tweet-style';
 @import '../js/components/facebook-post/facebook-post-style';
 @import '../js/components/google-post/google-post-style';
+@import '../js/components/instagram/instagram-style';
