--- a/client/js/pages/page/page-template.jade
+++ b/client/js/pages/page/page-template.jade
@@ -3,4 +3,5 @@ div.page-container
   tweet(ng-repeat='tweet in vm.tweets', data='tweet')
   facebook-post(ng-repeat='post in vm.facebookPosts', data='post')
   google-post(ng-repeat='post in vm.googlePosts', data='post')
+  instagram(ng-repeat='post in vm.instagrams', data='post')
 div.page-footer
