Unify data for all posts, add commenting

--- a/client/css/_theme.scss
+++ b/client/css/_theme.scss
@@ -1,10 +1,13 @@
 // sizes
 $desktop-width: 768px;
 $fixed-post-width: 600px;
+$toolbar-height: 40px;
 
 // theme colors
 $non-photo-blue: #A4DDED;
 $instagram-background: #EDEEEF;
+
+$primary: #3B5998;
 
 $font-main: #000000;
 $font-secondary: #777777;
