--- a/client/js/components/facebook-post/facebook-post-style.scss
+++ b/client/js/components/facebook-post/facebook-post-style.scss
@@ -85,6 +85,7 @@ $facebook-post-border: 1px solid rgba(0, 0, 0, 0.1);;
 }
 
 .facebook-post-comment-user-image {
+  width: 32px;
   float: left;
   vertical-align: top;
   margin-right: 10px;
