--- a/client/css/_base.scss
+++ b/client/css/_base.scss
@@ -4,6 +4,15 @@ body, figure { margin: 0; }
   box-sizing: border-box;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+ol, ul {
+  list-style: none;
+}
+
 .clearfix:after {
   content: "";
   display: table;
