--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -4,15 +4,26 @@
 @import 'mixins';
 
 .page-container {
-  padding: 20px 0 40px 0;
+  padding: $toolbar-height + 20px 0 40px 0;
   background-color: $instagram-background;
 }
 
-.page-header {
-  background-color: $instagram-background;
+.post {
+  transition: opacity 0.5s linear;
+
+  &.ng-enter.ng-enter-active {
+    opacity: 1;
+  }
+
+  &.ng-enter {
+    opacity: 0;
+  }
 }
+
+@import '../js/pages/page/page-style';
 
 @import '../js/components/tweet/tweet-style';
 @import '../js/components/facebook-post/facebook-post-style';
 @import '../js/components/google-post/google-post-style';
 @import '../js/components/instagram/instagram-style';
+@import '../js/components/toolbar/toolbar-style';
