Add Tumblr and move feed to separate component.

--- a/client/css/_theme.scss
+++ b/client/css/_theme.scss
@@ -11,7 +11,7 @@ $primary: #3B5998;
 
 $font-main: #000000;
 $font-secondary: #777777;
-$font-tertiary: #cccccc;
+$font-tertiary: #aaaaaa;
 $link-color: #3B5998;
 
 $border-thin: 1px solid #BBBBBB;
