--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -26,4 +26,6 @@
 @import '../js/components/facebook-post/facebook-post-style';
 @import '../js/components/google-post/google-post-style';
 @import '../js/components/instagram/instagram-style';
+@import '../js/components/tumblr-post/tumblr-post-style';
 @import '../js/components/toolbar/toolbar-style';
+@import '../js/components/feed/feed-style';
