--- a/client/js/components/facebook-post/facebook-post-template.jade
+++ b/client/js/components/facebook-post/facebook-post-template.jade
@@ -1,50 +1,50 @@
 .facebook-post
   .facebook-post-upper
-    img.facebook-post-user-image(ng-src='{{ vm.data.userImage }}')
+    img.facebook-post-user-image(ng-src='{{ vm.post.userImage }}')
     .facebook-post-basic
-      a.facebook-post-full-name(href='#') {{ vm.data.fullName }}
+      a.facebook-post-full-name(href='#') {{ vm.post.fullName }}
       span.facebook-post-action(ng-if='vm.action') {{ vm.action }}
       span.facebook-post-subject(ng-if='vm.subject') {{ vm.subject }}
       br
-      span.facebook-post-detail.facebook-post-divider {{ vm.data.createdAt | date: "MMMM d 'at' hh:mma" }}
-      span.facebook-post-detail.facebook-post-divider(ng-if='vm.data.location') {{ vm.data.location }}
+      span.facebook-post-detail.facebook-post-divider {{ vm.post.createdAt | date: "MMMM d 'at' hh:mma" }}
+      span.facebook-post-detail.facebook-post-divider(ng-if='vm.post.location') {{ vm.post.location }}
       span.facebook-post-detail.facebook-post-divider.fa.fa-globe
 
-    .facebook-post-message {{ vm.data.message }}
-    img.facebook-post-image(ng-src='{{ vm.data.image }}', ng-if='vm.data.image')
-    video.facebook-post-video(ng-if='vm.data.video') {{ vm.data.message }}
+    .facebook-post-message {{ vm.post.message }}
+    img.facebook-post-image(ng-src='{{ vm.post.image }}', ng-if='vm.post.image')
+    video.facebook-post-video(ng-if='vm.post.video') {{ vm.post.message }}
 
     //.facebook-post-actions
     a.facebook-post-action.facebook-post-divider(href='#') Like
     a.facebook-post-action.facebook-post-divider(href='#') Comment
     a.facebook-post-action.facebook-post-divider(href='#') Share
 
-  .facebook-post-lower(ng-if='vm.data.favorites.length || vm.data.comments.length')
-    .facebook-post-likes(ng-if='vm.data.favorites.length > 0')
+  .facebook-post-lower(ng-if='vm.post.favorites.length || vm.post.comments.length')
+    .facebook-post-likes(ng-if='vm.post.favorites.length > 0')
       i.fa.fa-thumbs-o-up.facebook-blue &nbsp;
-      span(ng-if='vm.data.favorites.length === 1')
-        a(href='#') {{ vm.data.favorites[0].username }}
+      span(ng-if='vm.post.favorites.length === 1')
+        a(href='#') {{ vm.post.favorites[0].username }}
         |  likes this.
-      span(ng-if='vm.data.favorites.length === 2')
-        a(href='#') {{ vm.data.favorites[0].username }}
+      span(ng-if='vm.post.favorites.length === 2')
+        a(href='#') {{ vm.post.favorites[0].username }}
         |  and&nbsp;
-        a(href='#') {{ vm.data.favorites[1].username }}
+        a(href='#') {{ vm.post.favorites[1].username }}
         |  like this.
-      span(ng-if='vm.data.favorites.length === 3')
-        a(href='#') {{ vm.data.favorites[0].username }}
+      span(ng-if='vm.post.favorites.length === 3')
+        a(href='#') {{ vm.post.favorites[0].username }}
         |  and&nbsp;
-        a(href='#') {{ vm.data.favorites.length - 1 }} others
+        a(href='#') {{ vm.post.favorites.length - 1 }} others
         |  like this.
-      span(ng-if='vm.data.favorites.length > 3')
-        a(href='#') {{ vm.data.favorites[0].username }}
+      span(ng-if='vm.post.favorites.length > 3')
+        a(href='#') {{ vm.post.favorites[0].username }}
         | ,&nbsp;
-        a(href='#') {{ vm.data.favorites[1].username }}
+        a(href='#') {{ vm.post.favorites[1].username }}
         |  and&nbsp;
-        a(href='#') {{ vm.data.favorites.length - 2 }} others
+        a(href='#') {{ vm.post.favorites.length - 2 }} others
         |  like this.
 
     div
-      .facebook-post-comment(ng-repeat='comment in vm.data.comments')
+      .facebook-post-comment(ng-repeat='comment in vm.post.comments')
         img.facebook-post-comment-user-image(ng-src='{{ comment.userImage }}')
         .facebook-post-comment-right
           a.facebook-post-comment-username(href='#') {{ comment.username }}
