--- a/client/css/_theme.scss
+++ b/client/css/_theme.scss
@@ -15,6 +15,8 @@ $font-tertiary: #aaaaaa;
 $link-color: #3B5998;
 
 $border-thin: 1px solid #BBBBBB;
+$post-margin: 25px auto;
+$post-background-size: 10px;
 
 // fonts
 body {
