--- a/client/js/components/tumblr-post/tumblr-post-style.scss
+++ b/client/js/components/tumblr-post/tumblr-post-style.scss
@@ -1,9 +1,16 @@
 $tumblr-post-padding: 10px 20px;
+$tumblr-post-background: #36465D;
+
+.tumblr-post-background {
+  background-color: $tumblr-post-background;
+  margin: 0 auto;
+  padding: 20px;
+  width: 640px;
+}
 
 .tumblr-post {
   background-color: white;
   border-radius: 6px;
-  margin: 5px auto;
   position: relative;
   width: 100%;
 
