--- a/client/js/components/tweet/tweet-style.scss
+++ b/client/js/components/tweet/tweet-style.scss
@@ -2,10 +2,18 @@ $tweet-border-light: 1px solid rgba(0, 0, 0, 0.15);
 $tweet-left-width: 58px;
 $tweet-padding: 12px;
 $tweet-border-radius: 10px;
+$tweet-background: #55ACEE;
 
 .dot-before:before {
   content: "\00b7";
   margin: 0 5px 0 0;
+}
+
+.tweet-container-background {
+  background-color: $tweet-background;
+  margin: 0 auto;
+  padding: 20px;
+  width: 640px;
 }
 
 .tweet-container {
@@ -14,7 +22,6 @@ $tweet-border-radius: 10px;
   border-radius: $tweet-border-radius;
   box-sizing: border-box;
   position: relative;
-  margin: 5px auto;
   width: 100%;
 
   @include desktop {
