Add random images and videos

--- a/client/js/components/facebook-post/facebook-post-style.scss
+++ b/client/js/components/facebook-post/facebook-post-style.scss
@@ -57,7 +57,7 @@ $facebook-post-background: #3b5998;
   margin: 10px 0;
 }
 
-.facebook-post-image {
+.facebook-post-media {
   display: block;
   margin-bottom: 10px;
   width: 100%;
