--- a/client/js/components/instagram/instagram-style.scss
+++ b/client/js/components/instagram/instagram-style.scss
@@ -51,7 +51,7 @@ $instagram-background: #E0E1E2;
   font-weight: 700;
 }
 
-.instagram-image {
+.instagram-media {
   display: block;
   width: 100%;
 }
