--- a/client/js/components/tweet/tweet-style.scss
+++ b/client/js/components/tweet/tweet-style.scss
@@ -59,6 +59,11 @@ $tweet-background: #55ACEE;
   margin-bottom: 8px;
 }
 
+.tweet-video {
+  display: block;
+  width: 100%;
+}
+
 .tweet-full-name {
   font-weight: 700;
 }
