--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -29,3 +29,4 @@
 @import '../js/components/tumblr-post/tumblr-post-style';
 @import '../js/components/toolbar/toolbar-style';
 @import '../js/components/feed/feed-style';
+@import '../js/components/pin/pin-style';
