--- a/client/js/components/feed/feed-template.jade
+++ b/client/js/components/feed/feed-template.jade
@@ -5,3 +5,4 @@
     google-post(post='post', ng-switch-when='google')
     instagram(post='post', ng-switch-when='instagram')
     tumblr-post(post='post', ng-switch-when='tumblr')
+    pin(post='post', ng-switch-when='pinterest')
